--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,6 +106,7 @@
         <item name="android:textColor">?attr/primaryTextColor</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:gravity">center</item>
+        <item name="android:background">?attr/backgroundColorHighlight</item>
     </style>
 
     <style name="Menu_icon_style">
