--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="elevation_4">4dp</dimen>
     <dimen name="row_height">48dp</dimen>
     <dimen name="row_padding">16dp</dimen>
+    <dimen name="row_divider">2dp</dimen>
     <dimen name="elevation_16">16dp</dimen>
     <dimen name="elevation_12">12dp</dimen>
     <dimen name="bottom_snackbar_heigth">48dp</dimen>
